# TP2022

./: CMakeLists.txt  README.md
.github/workflows/: lex_test.yaml
A/: preparing.py
B/: lib.cpp
task1/: run.sh
task2/B/: CMakeLists.txt  lib.h
task2/C/: main.cpp  main.h
task3/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/cmake-with-flask/: Dockerfile
